--- a/native/package.json
+++ b/native/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "@nativescript/core": "~8.9.0",
-    "@nativescript/theme": "^3.1.0",
-    "nativescript-vue": "~2.9.3"
+    "nativescript-vue": "3.0.2"
   },
   "devDependencies": {
-    "@nativescript/webpack": "~5.0.0",
-    "nativescript-vue-template-compiler": "~2.9.3"
+    "@nativescript/webpack": "~5.0.24",
+    "@nativescript/tailwind": "~4.0.3",
+    "@nativescript/types": "~8.9.1"
   }
 }
