Starting work on NativeScript translation. Errors currently.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nativescript/core": "~8.9.9"
+  },
   "devDependencies": {
     "typescript": "^5.5.3"
   },
