--- a/native/package.json
+++ b/native/package.json
@@ -1,15 +1,17 @@
 {
   "name": "native",
-  "main": "app/app.js",
+  "main": "app/app.ts",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@nativescript/core": "~8.9.0",
-    "nativescript-vue": "3.0.2"
+    "@nativescript/core": "~8.9.9",
+    "nativescript-vue": "3.0.2",
+    "pinia": "^3.0.4"
   },
   "devDependencies": {
-    "@nativescript/webpack": "~5.0.24",
+    "@nativescript/preview-cli": "1.0.14",
     "@nativescript/tailwind": "~4.0.3",
-    "@nativescript/types": "~8.9.1"
+    "@nativescript/types": "~8.9.1",
+    "@nativescript/webpack": "~5.0.24"
   }
 }
