--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -11,6 +11,6 @@ RUN pnpm build
 # Stage 2: Serve
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY web/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
